Bug 1710237 - do not show .tab-icon-overlay for PiP anymore, r=jaws, a=jcristau
This fixes two issues: the overlay 'steals' clicks when displayed for PiP for pinned tabs,
and for unpinned tabs hovering the (invisible) overlay on the icon alters the status text
display (to 'mute tab') - but clicking does not have the effect described by the status text.

Differential Revision: https://phabricator.services.mozilla.com/D115500

--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -35,7 +35,7 @@
 }
 
 .tab-sharing-icon-overlay[sharing]:not([selected]),
-.tab-icon-overlay:is([soundplaying], [muted], [activemedia-blocked], [pictureinpicture], [crashed]) {
+.tab-icon-overlay:is([soundplaying], [muted], [activemedia-blocked], [crashed]) {
   display: revert;
 }
 } /*** END proton ***/
